--- a/Challenge2_CSS_Basics(1) (1)/index.html
+++ b/Challenge2_CSS_Basics(1) (1)/index.html
@@ -124,8 +124,9 @@
 
           <section>
             <h3>Seneca College - Toronto, ON</h3>
-            <p>Webmaster Content Site Design Certificate, 2006</p>
-            <p>14 week full-time program covering HTML, CSS, Flash, Photoshop, PHP and JavaScript.</p>
+            <p>Webmaster Content Site Design Certificate, 
+            <br> 2006 14 week full-time program covering HTML,
+            <br>CSS, Flash, Photoshop, PHP and JavaScript.</p>
           </section>
 
           <section>
