--- a/Challenge2_CSS_Basics_hand_in/work-experience.html
+++ b/Challenge2_CSS_Basics_hand_in/work-experience.html
@@ -96,7 +96,7 @@
 </style>
 
 
-<a class="btn" href="http://127.0.0.1:62353/index.html" target="_blank"> Home</a>
+<a class="btn" href="index.html" target="_blank"> Home</a>
            
         </div>
       </section>
