--- a/Challenge2_CSS_Basics_hand_in/index.html
+++ b/Challenge2_CSS_Basics_hand_in/index.html
@@ -1,136 +1,136 @@
 
-    <!DOCTYPE html>
-    <html lang="en">
-      <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Christina Truong, Tech Educator + Front-end Developer</title>
-        <link  href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="css/styles.css">
-      </head>
-      <body>
-        <main>
-          <!-- ***************  ABOUT / PROFILE  **************** -->
-          <header>
-            <div class="content-wrap">
-              <h1>Christina Truong</h1>
-              <h2>Tech Educator + Front-end Developer</h2>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Christina Truong, Tech Educator + Front-end Developer</title>
+    <link  href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/styles.css">
+  </head>
+  <body>
+    <main>
+      <!-- ***************  ABOUT / PROFILE  **************** -->
+      <header>
+        <div class="content-wrap">
+          <h1>Christina Truong</h1>
+          <h2>Tech Educator + Front-end Developer</h2>
 
-              <p>As a developer, I specialize in creating modular and scalable front-end architectures. As an educator, I focus on creating inclusive learning environments, instructor training and curriculum development.</p>
-              <p>I’m also exploring more creative pursuits designing tee shirts and accessories for <a href="http://teethang.com" target="_blank">Nuthin’ But a Tee Thang</a>, an online store I’m running with my husband.</p>
-            </div>
-          </header>
+          <p>As a developer, I specialize in creating modular and scalable front-end architectures. As an educator, I focus on creating inclusive learning environments, instructor training and curriculum development.</p>
+          <p>I’m also exploring more creative pursuits designing tee shirts and accessories for <a href="http://teethang.com" target="_blank">Nuthin’ But a Tee Thang</a>, an online store I’m running with my husband.</p>
+        </div>
+      </header>
 
-          <!-- ************ PROJECTS / PORTFOLIO  ************** -->
-          <section class="projects">
-            <div class="content-wrap divider">
-              <h2>Featured Projects</h2>
-              <p>View selected projects below. More information can be found at <a href="http://christinatruong.com">christinatruong.com</a>.</p>
+      <!-- ************ PROJECTS / PORTFOLIO  ************** -->
+      <section class="projects">
+        <div class="content-wrap divider">
+          <h2>Featured Projects</h2>
+          <p>View selected projects below. More information can be found at <a href="http://christinatruong.com">christinatruong.com</a>.</p>
 
-              <!-- Project 1 -->
-              <section class="project-item">
-                <img src="images/project-courses.jpg" alt="Lynda & LinkedIn Learning course list">
-                <h3>Lynda / LinkedIn Learning Courses</h3>
-                <p>Developed content and instruction for various CSS and front-end focused web development courses including CSS Essential Training, Getting Your Website Online, Design Systems & Architectures and more.</p>
-                <a class="btn" href="https://www.linkedin.com/learning/instructors/christina-truong?u=2125562" target="_blank">LinkedIn Learning</a>
-                <a class="btn" href="https://www.lynda.com/Christina-Truong/7842227-1.html">Lynda.com</a>
-              </section>
-
-              <!-- Project 2 -->
-              <section class="project-item">
-                <img src="images/project-women-tech.jpg" alt="Women and Tech website">
-                <h3>Women&&Tech</h3>
-                <p>Women&&Tech was launched in 2012 to feature interviews with different women working in the tech industry. I became familiar with them when I was invited to be one of the interviewees! A few years later, I joined the team and helped with the relaunch of the site as the front-end architect.</p>
-                <a class="btn" href="http://christinatruong.com/projects/women-and-tech-redesign.html" target="_blank">View the case study</a>
-              </section>
-
-              <!-- Project 3 -->
-              <section class="project-item">
-                <img src="images/project-wire-ipsum.jpg" alt="The Wire Ipsum website">
-                <h3>The Wire Ipsum</h3>
-                <p>After coming back from teaching a JavaScript workshop, I felt inspired to create something just for fun. I realized that of all the content/lorem ipsum generators available, there was nothing for HBO’s The Wire fans. I searched for <a href="http://thewireipsum.com" target="_blank">thewireipsum.com</a> domain and it was available! Generate some content for your projects today.</p>
-                <a class="btn" href="http://thewireipsum.com" target="_blank">View live site</a>
-                <a class="btn" href="http://127.0.0.1:62353/work-experience.html" target="_blank">Work Experience</a>
-              </section>  
-            </div>
-          </section> 
-
-          <!-- *************  EDUCATION & CERTIFICATIONS *********** -->
-          <section class="education">
-            <div class="content-wrap item-details">
-              <h2>Education</h2>
-              <section>
-                <h3>Seneca College - Toronto, ON</h3>
-                <p>Webmaster Content Site Design Certificate, 
-                <br> 2006 14 week full-time program covering HTML,
-                <br>CSS, Flash, Photoshop, PHP and JavaScript.</p>
-              </section>
-
-              <section>
-                <h3>York University - Toronto, ON</h3>
-                <p>Bachelor of Arts with Honours, 2001-2005</p>
-                <p>Double Major in Communications & Psychology.</p>
-              </section>
-
-              <section>
-                <h3>San Jose State University - San Jose, CA</h3>
-                <p>General Studies, 2000</p>
-              </section>
-            </div>
+          <!-- Project 1 -->
+          <section class="project-item">
+            <img src="images/project-courses.jpg" alt="Lynda & LinkedIn Learning course list">
+            <h3>Lynda / LinkedIn Learning Courses</h3>
+            <p>Developed content and instruction for various CSS and front-end focused web development courses including CSS Essential Training, Getting Your Website Online, Design Systems & Architectures and more.</p>
+            <a class="btn" href="https://www.linkedin.com/learning/instructors/christina-truong?u=2125562" target="_blank">LinkedIn Learning</a>
+            <a class="btn" href="https://www.lynda.com/Christina-Truong/7842227-1.html">Lynda.com</a>
           </section>
-            <!-- *************  My hobbies *********** -->
 
-        <h2> My Hobbies</h2><p> 
+          <!-- Project 2 -->
+          <section class="project-item">
+            <img src="images/project-women-tech.jpg" alt="Women and Tech website">
+            <h3>Women&&Tech</h3>
+            <p>Women&&Tech was launched in 2012 to feature interviews with different women working in the tech industry. I became familiar with them when I was invited to be one of the interviewees! A few years later, I joined the team and helped with the relaunch of the site as the front-end architect.</p>
+            <a class="btn" href="http://christinatruong.com/projects/women-and-tech-redesign.html" target="_blank">View the case study</a>
+          </section>
+
+          <!-- Project 3 -->
+          <section class="project-item">
+            <img src="images/project-wire-ipsum.jpg" alt="The Wire Ipsum website">
+            <h3>The Wire Ipsum</h3>
+            <p>After coming back from teaching a JavaScript workshop, I felt inspired to create something just for fun. I realized that of all the content/lorem ipsum generators available, there was nothing for HBO’s The Wire fans. I searched for <a href="http://thewireipsum.com" target="_blank">thewireipsum.com</a> domain and it was available! Generate some content for your projects today.</p>
+            <a class="btn" href="http://thewireipsum.com" target="_blank">View live site</a>
+            <a class="btn" href="work-experience.html" target="_blank">Work Experience</a>
+          </section>  
+        </div>
+      </section> 
+
+      <!-- *************  EDUCATION & CERTIFICATIONS *********** -->
+      <section class="education">
+        <div class="content-wrap item-details">
+          <h2>Education</h2>
+          <section>
+            <h3>Seneca College - Toronto, ON</h3>
+            <p>Webmaster Content Site Design Certificate, 
+            <br> 2006 14 week full-time program covering HTML,
+            <br>CSS, Flash, Photoshop, PHP and JavaScript.</p>
+          </section>
+
+          <section>
+            <h3>York University - Toronto, ON</h3>
+            <p>Bachelor of Arts with Honours, 2001-2005</p>
+            <p>Double Major in Communications & Psychology.</p>
+          </section>
+
+          <section>
+            <h3>San Jose State University - San Jose, CA</h3>
+            <p>General Studies, 2000</p>
+          </section>
+        </div>
+      </section>
+        <!-- *************  My hobbies *********** -->
+
+    <h2> My Hobbies</h2><p> 
     <section>
-    <style>
-    div.gallery {
-      border: 1px solid #ccc;
-    }
+        <style>
+            div.gallery {
+              border: 1px solid #ccc;
+            }
 
-    div.gallery:hover {
-      border: 1px solid #777;
-    }
+            div.gallery:hover {
+              border: 1px solid #777;
+            }
 
-    div.gallery img {
-      width: 100%;
-      height: auto;
-    }
+            div.gallery img {
+              width: 100%;
+              height: auto;
+            }
 
-    div.desc {
-      padding: 15px;
-      text-align: center;
-    }
+            div.desc {
+              padding: 15px;
+              text-align: center;
+            }
 
-    * {
-      box-sizing: border-box;
-    }
+            * {
+              box-sizing: border-box;
+            }
 
-    .responsive {
-      padding: 0 6px;
-      float: left;
-      width: 24.99999%;
-    }
+            .responsive {
+              padding: 0 6px;
+              float: left;
+              width: 24.99999%;
+            }
 
-    @media only screen and (max-width: 700px) {
-      .responsive {
-        width: 49.99999%;
-        margin: 6px 0;
-      }
-    }
+            @media only screen and (max-width: 700px) {
+              .responsive {
+                width: 49.99999%;
+                margin: 6px 0;
+              }
+            }
 
-    @media only screen and (max-width: 500px) {
-      .responsive {
-        width: 100%;
-      }
-    }
+            @media only screen and (max-width: 500px) {
+              .responsive {
+                width: 100%;
+              }
+            }
 
-    .clearfix:after {
-      content: "";
-      display: table;
-      clear: both;
-    }
-    </style>
-        </section>
+            .clearfix:after {
+              content: "";
+              display: table;
+              clear: both;
+            }
+        </style>
+    </section>
 
     <div class="responsive">
       <div class="gallery">
@@ -157,7 +157,7 @@
         <a target="_blank" href="images/researcher.jpg">
           <img src="images/researcher.jpg" width="600" height="400">
         </a>
-        <div class="desc">FashTech is the new innovation frontiere</div>
+        <div class="desc">FashTech is the new innovation frontier</div>
       </div>
     </div>
     <div class="responsive">
@@ -170,22 +170,22 @@
     </div>
     <div class="clearfix"></div>
 
-    <div style="padding:6px;">
-          <!-- ************  CONTACT INFO / SOCIAL MEDIA  ************ -->
-          <footer>
-            <div class="content-wrap">
-              <h2>Let's Keep in Touch!</h2>
+        <div style="padding:6px;"></div>
+      <!-- ************  CONTACT INFO / SOCIAL MEDIA  ************ -->
+    <footer>
+        <div class="content-wrap">
+          <h2>Let's Keep in Touch!</h2>
 
-              <!-- Social media and contact links. Add or remove any networks. -->
-              <ul class="contact-list">
-                <li><a href="mailto:email@example.com">email@example.com</a></li>
-                <li><a href="http://christinatruong.com" target="_blank">christinatruong.com</a></li>
-                <li><a href="http://twitter.com/christinatruong" target="_blank">Twitter</a></li>
-                <li><a href="#" target="_blank">LinkedIn</a></li>
-              </ul>
-            </div>
-          </footer>
+          <!-- Social media and contact links. Add or remove any networks. -->
+          <ul class="contact-list">
+            <li><a href="mailto:email@example.com">email@example.com</a></li>
+            <li><a href="http://christinatruong.com" target="_blank">christinatruong.com</a></li>
+            <li><a href="http://twitter.com/christinatruong" target="_blank">Twitter</a></li>
+            <li><a href="#" target="_blank">LinkedIn</a></li>
+          </ul>
+        </div>
+    </footer>
         </main>
-      </body>
-        </html>
+    </body>
+</html>
 
